<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="top_charts">Top Charts</string>
    <string name="genre_pop">Pop</string>
    <string name="genre_rock">Rock</string>
    <string name="genre_hiphop">Hip Hop</string>
    <string name="genre_electronic">Electronic</string>
    <string name="play">Play song</string>
    <string name="now_playing">Now playing</string>
    <string name="top10">Top 10 songs</string>
    <string name="song_name">Song name</string>
    <string name="artist_name">Artist name</string>
    <string name="duration_time">Duration</string>
</resources>
