<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="80dp"
    android:id="@+id/color_list"
    tools:ignore="InvalidId">

    <TextView
        android:id="@+id/song_name"
        style="@style/SongListStyle"
        android:layout_alignLeft="@+id/song_artist"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/song_artist"
        android:layout_marginTop="@dimen/spacing8"
        android:textSize="@dimen/text_size"
        tools:text="@string/song_name" />

    <TextView
        android:id="@+id/song_artist"
        style="@style/SongListStyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/song_name"
        android:layout_marginLeft="@dimen/spacing8"
        android:layout_marginStart="@dimen/spacing8"
        android:textSize="@dimen/text_view_size"
        tools:text="@string/artist_name" />

    <TextView
        android:id="@+id/duration_time"
        style="@style/SongListStyle"
        android:layout_alignBaseline="@+id/song_name"
        android:layout_alignBottom="@+id/song_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/spacing16"
        android:layout_marginRight="@dimen/spacing16"
        android:textSize="@dimen/text_view_size"
        tools:text="@string/duration_time" />

    <ImageView
        android:id="@+id/play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/duration_time"
        android:layout_alignStart="@+id/duration_time"
        android:layout_below="@+id/song_name"
        android:contentDescription="@string/play"
        app:srcCompat="@android:drawable/ic_media_play" />

</RelativeLayout>