<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.musicalstructureapp.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/DescriptionStyle"
            android:layout_width="@dimen/spacing0"
            android:layout_height="@dimen/title_height"
            android:text="@string/top_charts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/popTextView"
            style="@style/CategoryStyle"
            android:background="@color/colorPop"
            android:text="@string/genre_pop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rockTextView"
            style="@style/CategoryStyle"
            android:background="@color/colorRock"
            android:text="@string/genre_rock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/hiphopTextView"
            style="@style/CategoryStyle"
            android:background="@color/colorHipHop"
            android:text="@string/genre_hiphop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/electronicTextView"
            style="@style/CategoryStyle"
            android:background="@color/colorElectronic"
            android:text="@string/genre_electronic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hiphopTextView"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>